--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com"
+        "url": "https://github.com/EdwinCRL/LSA-Bot"
     },
     "dependencies": {
         "axios": "^0.27.2",
